# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: coverage.yml  linter.yml  pytest.yml
page_loader/: __init__.py  logger.py  page_loader.py
page_loader/scripts/: loader.py
tests/: test_page_loader.py
tests/fixtures/: easy_html_images.html
